Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38023

Crashes when create new printer object on OS X

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.3.0 RC1
    • 5.3.0 Beta1
    • GUI: Printing
    • None
    • QT 5.3.0 Beta 1
      OS X 10.9.2
      MacBoox Pro (late 2013) 2,6 GHz - Intel Core i7 - 16 Gt
    • macOS
    • 0e62671bc0e6df5385b5eb8841b490190e411987 c92fead4333683f7b13fc730203c67834aa478ef

      Creating a new QPrinter object crashes when running deployable application bundle on OS X. It works when application is run from Qt Creator.

      QPrinter printer(QPrinter::ScreenResolution);
      

      The problem occurred on Qt 5.3 Beta 1 but works ok on Qt 5.2.1.

      1. Open example project (print_test)
      2. Build project in Release -mode
      3. Run macdeployqt for bundle (macdeployqt print_test.app)
      4. Try to execute bundle (print_test.app)

      Result:

      Crashed Thread:  0  Dispatch queue: com.apple.main-thread
      
      Exception Type:  EXC_BAD_ACCESS (SIGSEGV)
      Exception Codes: EXC_I386_GPFLT
      
      Application Specific Information:
      objc_msgSend() selector name: release
      
      
      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0   libobjc.A.dylib               	0x00007fff8c93b097 objc_msgSend + 23
      1   com.apple.CoreFoundation      	0x00007fff8fc5267f CFRelease + 591
      2   com.apple.CoreFoundation      	0x00007fff8fc616c8 __CFBasicHashDrain + 408
      3   com.apple.CoreFoundation      	0x00007fff8fc525d8 CFRelease + 424
      4   com.apple.CoreFoundation      	0x00007fff8fc616c8 __CFBasicHashDrain + 408
      5   com.apple.CoreFoundation      	0x00007fff8fc525d8 CFRelease + 424
      6   com.apple.print.framework.PrintCore	0x00007fff8f27cebe PMTicketReleaseAndClear + 33
      7   com.apple.print.framework.PrintCore	0x00007fff8f27a6a2 PMTicketBaseObject::~PMTicketBaseObject() + 36
      8   com.apple.print.framework.PrintCore	0x00007fff8f27a615 OpaquePMPageFormat::~OpaquePMPageFormat() + 15
      9   com.apple.print.framework.PrintCore	0x00007fff8f27d727 PMBaseObject::Release(PMBaseObject*) + 27
      10  com.apple.print.framework.PrintCore	0x00007fff8f27d6f1 PMRelease + 43
      11  libqcocoa.dylib               	0x0000000103b55316 QCocoaPrintDevice::defaultPageSize() const + 118
      12  libqcocoa.dylib               	0x0000000103b4d77b QMacPrintEngine::QMacPrintEngine(QPrinter::PrinterMode) + 395
      13  libqcocoa.dylib               	0x0000000103b53862 QCocoaPrinterSupport::createNativePrintEngine(QPrinter::PrinterMode) + 34
      14  QtPrintSupport                	0x0000000100013c5c QPrinterPrivate::initEngines(QPrinter::OutputFormat, QPrinterInfo const&) + 396
      15  QtPrintSupport                	0x000000010001428f QPrinter::QPrinter(QPrinter::PrinterMode) + 159
      16  mpsoft.fiprint_test           	0x0000000100002abf main + 47
      17  mpsoft.fiprint_test           	0x0000000100002a84 start + 52
      

        1. print_test.zip
          2 kB
          J Matilainen
        2. print_test_2014-04-01-160030_Juhani-MacBook-Pro.crash
          35 kB
          J Matilainen
        3. print_test_app.zip
          7.84 MB
          J Matilainen
        For Gerrit Dashboard: QTBUG-38023
        # Subject Branch Project Status CR V

            johnlayt John Layt
            jimcad J Matilainen
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes